--- a/build.gradle
+++ b/build.gradle
@@ -7,11 +7,12 @@
  */
 plugins {
     id 'application'
-    id 'com.github.ben-manes.versions' version '0.41.0'
     id 'checkstyle'
-    id 'java'
+    id 'com.adarshr.test-logger' version '3.1.0'
+    id 'com.github.ben-manes.versions' version '0.41.0'
+    id 'io.freefair.lombok' version '6.3.0'
     id 'jacoco'
-    id 'com.adarshr.test-logger' version '3.0.0'
+
 }
 
 dependencies {
